
Change Log Update (00.00.16)
* 2016-03-17
+ Created new Mods Sub folder to store system modules
  All modules will be containers of system functions like mod_login for login procedures
  mod_messages for message, mod_files for files, mod_bbslist etc.. 
  Each module will contain it's own asynchronous input processing and output
  And everything will pass through from Session->MenuSystem->Modules
+ Bit of rework on the Menu System, changes passing character_buffer and bools to const references.
+ Added new startupModuleLogon() and moduleInput() for dynamic and asynchronous processing. 

Change Log Update (00.00.15)
* 2016-03-16
+ Moved Menu and Structures to Data Folder
+ Rename MenuData to MenuDao for Data Access Object.
+ Working out how the login process will work from the menu system
- Also need to determine layout for language files, multiple languages / themes.

Change Log Update (00.00.14)
* 2016-03-16
+ Reworking the Menu System and Ironing out the functionality
+ Created executeMenuOptions() to handle processing command keys from input.
+ Setting processMenuOptions() to taken input and pass to execute
- Working default startup to check configuration for Matrix or normal logon.
  Then setting up the startup menu properly.  
- Building initial login with apply as new first
- Looking at best way to handle language file for prompts, thinking key value map
  is much better then int indexes, don't have to worry about order ever!

Change Log Update (00.00.13)
* 2016-03-15
+ Cleaned up some Menu System Items
+ Need to add startup to matrix, and test for configuration value if it's enabled.
+ Start building out matrix menu, and new user application next!

Change Log Update (00.00.12)
* 2016-03-13
+ Config file will auto generate with defaults if it doesn't exist.
+ Using new Config Class and DAO to read config file. Remove references to Config.BBS
  which wasn't being used.
+ Telnet and SSL Sockets listeners are now swapped depending on configuration settings.